src/test/deca/context/invalid/provided/class36.deca
class A{
    int x;
    boolean x;
}
